--- a/AppWeb/src/styles/Pages/index.css
+++ b/AppWeb/src/styles/Pages/index.css
@@ -1,10 +1,10 @@
 .Index {
-  background-color: #555500;
+  background-color: #001020;
   position: relative;
 }
 
 .Index-Post {
-  background-color: #0066aa ;
+  background-color: inherit ;
   position: relative;
   display: flex;
   justify-content: center;
