--- a/AppWeb/src/styles/Header/navigation.css
+++ b/AppWeb/src/styles/Header/navigation.css
@@ -1,3 +1,12 @@
 .HeaderNavigation {
+  font-family: 'Courier New', monospace;
+  padding-left: 1em;
+  padding-right: 1em;
+}
+.HNI{
   background-color: #00aaaa;
+  position: relative;
+  top: 2em;
+  border-radius: 15%;
+  padding: 0.3em;
 }
